Add standalone Gradle application plugin
Add the standalone `io.quarkus.application` Gradle plugin and its DSL and task model for packaging, development, testing, code generation, container images, remote development, and startup archives.

Integrate the plugin with the Gradle application model, bootstrap sidecar, dev-mode build-output protocol, container-image support, and Gradle integration tests.